fix loading skeleton style on smaller screens

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -34,11 +34,7 @@ html {
 
 body {
   margin: 0;
-  height: 100vh;
-
-  @media (width < 960px) {
-    height: auto;
-  }
+  height: 100dvh;
 }
 
 #app {
@@ -49,6 +45,7 @@ body {
   flex-direction: column;
 
   @media (width < 960px) {
+    min-height: 100dvh;
     height: auto;
   }
 }
@@ -95,11 +92,16 @@ a:focus-visible {
 
 .skeleton {
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   display: grid;
   grid-template-columns: 300px 1fr;
   grid-template-rows: 85px 1fr 85px;
   animation: pulse 500ms infinite alternate ease-in-out;
+
+  @media (width < 960px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 85px 100px 1fr 85px;
+  }
 }
 
 .skeleton__header {
@@ -113,6 +115,11 @@ a:focus-visible {
 
 .skeleton__aside {
   border-right: 2px solid var(--orange);
+
+  @media (width < 960px) {
+    border-right: none;
+    border-bottom: 2px solid var(--orange);
+  }
 }
 
 .skeleton__footer {
